--- a/public/10-1-vision-2.html
+++ b/public/10-1-vision-2.html
@@ -158,26 +158,32 @@
 					<div class="section-title text-center">
 						<h2>Наше видение</h2>
 					</div>
+				</div>
+				<div class="container-wide">
 					<div class="sHistory-wrap"> 
 						<!-- start sHistory-yell-->
 						<div class="head-wrapper">
-							<div class="row"> 
-								<div class="head-wrapper__col col-lg-6">
-									<h2>Придаём брендам человеческое лицо,</h2>
-									<p>помогая им&nbsp;адаптироваться и&nbsp;процветать в&nbsp;мире множества взаимосвязей</p>
-								</div>
-								<div class="col-lg-6">
-									<!-- picture-->
-									<picture> 
-										<source type="image/avif" srcset="img/@2x/avif/sHistory-bg.avif"/>
-										<source type="image/webp" srcset="img/@2x/webp/sHistory-bg.webp"/><img src="img/@2x/sHistory-bg.jpg" alt="" loading="lazy"/>
-									</picture>
-									<!-- /picture-->
+							<div class="container">
+								<div class="row"> 
+									<div class="head-wrapper__col col-lg-6">
+										<h2>Придаём брендам человеческое лицо,</h2>
+										<p>помогая им&nbsp;адаптироваться и&nbsp;процветать в&nbsp;мире множества взаимосвязей</p>
+									</div>
+									<div class="col-lg-6">
+										<!-- picture-->
+										<picture> 
+											<source type="image/avif" srcset="img/@2x/avif/sHistory-bg.avif"/>
+											<source type="image/webp" srcset="img/@2x/webp/sHistory-bg.webp"/><img src="img/@2x/sHistory-bg.jpg" alt="" loading="lazy"/>
+										</picture>
+										<!-- /picture-->
+									</div>
 								</div>
 							</div>
 						</div>
 						<!-- end sHistory-yell -->
 					</div>
+				</div>
+				<div class="container">
 					<div class="row">
 						<div class="col">
 							<div class="text-wrapper">
@@ -196,51 +202,53 @@
 						</div>
 					</div>
 				</div>
-				<div class="container-fluid"> 
+				<div class="container-wide">
 					<div class="vision-item-wrapp">
-						<div class="row"> 
-							<div class="col"> 
-								<div class="span-wrapper"> <span>Наш подход</span></div>
-							</div>
-						</div>
-						<div class="row"> 
-										<div class="col-12 col-lg-6">
-											<div class="vis-item-elem-1 vision-item"> <img src="img/svg/vision-item-1.svg"/>
-												<div class="vis-item-elem-1__text"> 
-													<div class="h3">Смотреть глубже, видеть шире</div>
-													<p>Мы думаем на 360, оценивая проблемы и возможности, с которыми сталкивается бизнес, не ограничиваясь брифом. Мы используем широкий аналитический и исследовательский инструментарий, базирующийся на социальной психологии и личностном анализе, позволяющий выявить истинные потребительские мотивации в контексте современного общества.</p>
-												</div>
-											</div>
-										</div>
-							<div class="col-12 col-lg-6">
-								<div class="vis-item-elem-2 vision-item"> <img src="img/svg/vision-item-2.svg"/>
-									<div class="vis-item-elem-2__text"> 
-										<div class="h3">Фокусироваться на важном </div>
-										<p>
-											Мы уверены, что затрачиваемые на брендинг ресурсы
-											принесут максимальную пользу при правильно выбранном
-											фокусе. Концентрация на одной основополагающей яркой
-											резонансной идее, заряженной эмоциями, позволяет<strong> формировать эффективные базисы для будущей коммуникации.</strong>
-										</p>
-									</div>
+						<div class="container">
+							<div class="row"> 
+								<div class="col"> 
+									<div class="span-wrapper"> <span>Наш подход</span></div>
 								</div>
 							</div>
-										<div class="col-12 col-lg-6">
-											<div class="vis-item-elem-3 vision-item"> <img src="img/svg/vision-item-3.svg"/>
-												<div class="vis-item-elem-3__text"> 
-													<div class="h3">Работать не для, а вместе с клиентом</div>
-													<p>Наша компания – это продолжение команды заказчика. Мы ценим и активно используем знания и творческую энергию клиента, максимально вовлекая его в процесс разработки креативных решений. </p>
+							<div class="row"> 
+												<div class="col-12 col-lg-6">
+													<div class="vis-item-elem-1 vision-item"> <img src="img/svg/vision-item-1.svg"/>
+														<div class="vis-item-elem-1__text"> 
+															<div class="h3">Смотреть глубже, видеть шире</div>
+															<p>Мы думаем на 360, оценивая проблемы и возможности, с которыми сталкивается бизнес, не ограничиваясь брифом. Мы используем широкий аналитический и исследовательский инструментарий, базирующийся на социальной психологии и личностном анализе, позволяющий выявить истинные потребительские мотивации в контексте современного общества.</p>
+														</div>
+													</div>
 												</div>
-											</div>
+								<div class="col-12 col-lg-6">
+									<div class="vis-item-elem-2 vision-item"> <img src="img/svg/vision-item-2.svg"/>
+										<div class="vis-item-elem-2__text"> 
+											<div class="h3">Фокусироваться на важном </div>
+											<p>
+												Мы уверены, что затрачиваемые на брендинг ресурсы
+												принесут максимальную пользу при правильно выбранном
+												фокусе. Концентрация на одной основополагающей яркой
+												резонансной идее, заряженной эмоциями, позволяет<strong> формировать эффективные базисы для будущей коммуникации.</strong>
+											</p>
 										</div>
-										<div class="col-12 col-lg-6">
-											<div class="vis-item-elem-4 vision-item"> <img src="img/svg/vision-item-4.svg"/>
-												<div class="vis-item-elem-4__text"> 
-													<div class="h3">Работать для клиентов клиента</div>
-													<p>Мы заставляем бренды работать, создавая понятные для потребителя решения, которые вызывают интерес, доверие и приводят к ожидаемым, выгодным для бизнеса, реакциям.</p>
+									</div>
+								</div>
+												<div class="col-12 col-lg-6">
+													<div class="vis-item-elem-3 vision-item"> <img src="img/svg/vision-item-3.svg"/>
+														<div class="vis-item-elem-3__text"> 
+															<div class="h3">Работать не для, а вместе с клиентом</div>
+															<p>Наша компания – это продолжение команды заказчика. Мы ценим и активно используем знания и творческую энергию клиента, максимально вовлекая его в процесс разработки креативных решений. </p>
+														</div>
+													</div>
 												</div>
-											</div>
-										</div>
+												<div class="col-12 col-lg-6">
+													<div class="vis-item-elem-4 vision-item"> <img src="img/svg/vision-item-4.svg"/>
+														<div class="vis-item-elem-4__text"> 
+															<div class="h3">Работать для клиентов клиента</div>
+															<p>Мы заставляем бренды работать, создавая понятные для потребителя решения, которые вызывают интерес, доверие и приводят к ожидаемым, выгодным для бизнеса, реакциям.</p>
+														</div>
+													</div>
+												</div>
+							</div>
 						</div>
 					</div>
 				</div>
