--- a/public/11-1-team.html
+++ b/public/11-1-team.html
@@ -156,8 +156,12 @@
 			<section class="sTeam section" id="sTeam">
 				<div class="container">
 					<div class="section-title">
-						<!-- start sHistory-yell-->
-						<div class="head-wrapper">
+					</div>
+				</div>
+				<div class="container-wide">
+					<!-- start sHistory-yell-->
+					<div class="head-wrapper">
+						<div class="container">
 							<div class="row"> 
 								<div class="head-wrapper__col col-lg-6">
 									<h2>Придаём брендам человеческое лицо,</h2>
@@ -173,15 +177,17 @@
 								</div>
 							</div>
 						</div>
-						<!-- end sHistory-yell -->
-						<div class="row"> 
-							<div class="col"> 
-								<p>
-									 DDVB насчитывает более 150 наград престижных конкурсов в
-									области брендинга, дизайна и&nbsp;рекламы, а&nbsp;также 
-									ряда публикаций в&nbsp;профильных зарубежных СМИ.
-								</p>
-							</div>
+					</div>
+					<!-- end sHistory-yell -->
+				</div>
+				<div class="container pb-3">
+					<div class="row"> 
+						<div class="col"> 
+							<p>
+								 DDVB насчитывает более 150 наград престижных конкурсов в
+								области брендинга, дизайна и&nbsp;рекламы, а&nbsp;также 
+								ряда публикаций в&nbsp;профильных зарубежных СМИ.
+							</p>
 						</div>
 					</div>
 				</div>
