--- a/public/18-contentPage.html
+++ b/public/18-contentPage.html
@@ -170,12 +170,8 @@
 					</ul>
 					<!-- picture-->
 					<picture> 
-						<source type="image/avif" srcset="img/@2x/avif/content-img-1.avif" media="(min-width:576px)"/>
-						<source type="image/avif" srcset="img/@1x/avif/content-img-1.avif"/>
-						<source type="image/webp" srcset="img/@2x/webp/content-img-1.webp" media="(min-width:576px)"/>
-						<source type="image/webp" srcset="img/@1x/webp/content-img-1.webp"/>
-						<source type="image/jpg" srcset="img/@2x/avif/content-img-1.jpg" media="(min-width:576px)"/>
-						<source type="image/jpg" srcset="img/@1x/avif/content-img-1.jpg"/><img src="img/@2x/content-img-1.jpg" alt="" loading="lazy"/>
+						<source type="image/avif" srcset="img/@2x/avif/content-img-1.avif"/>
+						<source type="image/webp" srcset="img/@2x/webp/content-img-1.webp"/><img src="img/@2x/content-img-1.jpg" alt="" loading="lazy"/>
 					</picture>
 					<!-- /picture--><span>Description</span>
 					<h6>H6&nbsp;Header two line words description</h6>
