--- a/public/03-Service-2.html
+++ b/public/03-Service-2.html
@@ -140,12 +140,14 @@
 					<div class="main-slider__slide swiper-slide">
 						<div class="main-slider__bg bg-wrap">
 							<picture class="picture-bg">
-								<source type="image/avif" srcset="img/@2x/avif/slide-lg-2.avif" media="(min-width:576px)"/>
-								<source type="image/avif" srcset="img/@2x/avif/slide-sm-2.avif"/>
-								<source type="image/webp" srcset="img/@2x/webp/slide-lg-2.webp" media="(min-width:576px)"/>
-								<source type="image/webp" srcset="img/@2x/webp/slide-sm-2.webp"/>
-								<source type="image/jpg" srcset="img/@2x/avif/slide-lg-2.jpg" media="(min-width:576px)"/>
-								<source type="image/jpg" srcset="img/@2x/avif/slide-sm-2.jpg"/><img class="object-fit-js" src="img/@2x/slide-lg-2.jpg" alt=""/>
+								<!-- 1920-->
+								<source type="image/jpg" srcset="img/@2x/slide-lg-2.jpg" media="(min-width:1280px)"/>
+								<!-- /1920-->
+								<!-- 1280-->
+								<source type="image/jpg" srcset="img/@2x/slide-sm-2.jpg" media="(min-width:992px)"/>
+								<!-- /1280-->
+								<!-- 768--><img class="object-fit-js" src="img/@2x/slide-sm-2.jpg" alt=""/>
+								<!-- /768-->
 							</picture>
 						</div>
 						<div class="main-slider__inner">
@@ -160,12 +162,14 @@
 					<div class="main-slider__slide swiper-slide">
 						<div class="main-slider__bg bg-wrap">
 							<picture class="picture-bg">
-								<source type="image/avif" srcset="img/@2x/avif/slide-lg-2.avif" media="(min-width:576px)"/>
-								<source type="image/avif" srcset="img/@2x/avif/slide-sm-2.avif"/>
-								<source type="image/webp" srcset="img/@2x/webp/slide-lg-2.webp" media="(min-width:576px)"/>
-								<source type="image/webp" srcset="img/@2x/webp/slide-sm-2.webp"/>
-								<source type="image/jpg" srcset="img/@2x/avif/slide-lg-2.jpg" media="(min-width:576px)"/>
-								<source type="image/jpg" srcset="img/@2x/avif/slide-sm-2.jpg"/><img class="object-fit-js" src="img/@2x/slide-lg-2.jpg" alt=""/>
+								<!-- 1920-->
+								<source type="image/jpg" srcset="img/@2x/slide-lg-2.jpg" media="(min-width:1280px)"/>
+								<!-- /1920-->
+								<!-- 1280-->
+								<source type="image/jpg" srcset="img/@2x/slide-sm-2.jpg" media="(min-width:992px)"/>
+								<!-- /1280-->
+								<!-- 768--><img class="object-fit-js" src="img/@2x/slide-sm-2.jpg" alt=""/>
+								<!-- /768-->
 							</picture>
 						</div>
 						<div class="main-slider__inner">
@@ -180,12 +184,14 @@
 					<div class="main-slider__slide swiper-slide">
 						<div class="main-slider__bg bg-wrap">
 							<picture class="picture-bg">
-								<source type="image/avif" srcset="img/@2x/avif/slide-lg-2.avif" media="(min-width:576px)"/>
-								<source type="image/avif" srcset="img/@2x/avif/slide-sm-2.avif"/>
-								<source type="image/webp" srcset="img/@2x/webp/slide-lg-2.webp" media="(min-width:576px)"/>
-								<source type="image/webp" srcset="img/@2x/webp/slide-sm-2.webp"/>
-								<source type="image/jpg" srcset="img/@2x/avif/slide-lg-2.jpg" media="(min-width:576px)"/>
-								<source type="image/jpg" srcset="img/@2x/avif/slide-sm-2.jpg"/><img class="object-fit-js" src="img/@2x/slide-lg-2.jpg" alt=""/>
+								<!-- 1920-->
+								<source type="image/jpg" srcset="img/@2x/slide-lg-2.jpg" media="(min-width:1280px)"/>
+								<!-- /1920-->
+								<!-- 1280-->
+								<source type="image/jpg" srcset="img/@2x/slide-sm-2.jpg" media="(min-width:992px)"/>
+								<!-- /1280-->
+								<!-- 768--><img class="object-fit-js" src="img/@2x/slide-sm-2.jpg" alt=""/>
+								<!-- /768-->
 							</picture>
 						</div>
 						<div class="main-slider__inner">
