--- a/public/index.html
+++ b/public/index.html
@@ -139,6 +139,19 @@
 				<div class="swiper-wrapper">
 					<div class="main-slider__slide swiper-slide">
 						<div class="main-slider__bg bg-wrap">
+							<video class="lf-image-cover lf-hero-video" autoplay="" loop="" muted="" playsinline="" preload="metadata" uk-video=""><source src="video/banner.83a0b3e58243.mp4" type="video/mp4"></video>
+						</div>
+						<div class="main-slider__inner">
+							<div class="container">
+								<div class="main-slider__text-wrap">
+									<div class="h1">Valio. Clean design for &laquo;Сlean label&raquo; dsasdasdasd</div>
+									<p>Потребительский брендинг g </p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="main-slider__slide swiper-slide">
+						<div class="main-slider__bg bg-wrap">
 							<picture class="picture-bg">
 								<!-- 1920-->
 								<source type="image/jpg" srcset="img/@2x/slide-lg.jpg" media="(min-width:1280px)"/>
