--- a/public/18-contentPage-2.html
+++ b/public/18-contentPage-2.html
@@ -178,22 +178,17 @@
 					<p>В&nbsp;нейминге мы&nbsp;отразили идею Центра Культур, который объединяет разные культуры: культуру общения, диалога, музыки, образования и&nbsp;так далее.</p>
 					<h5>Айдентинка</h5>
 					<p>Поскольку Культурный центр использует принцип «распределенной площадки» нам важно было все точки, расположенные в разных корпусах, объединить в единую узнаваемую стилистику, но при этом сохранить индивидуальность каждой площадки. Мы же помним: “разные, но равные”.</p>
-					<div class="quotes">
-						<figure>
-							<svg class="icon icon-quote ">
-								<use xlink:href="img/svg/sprite.svg#quote"></use>
-							</svg>
-							<blockquote>Самая соль этого эксперимента заключалась в&nbsp;том, что не&nbsp;было возможности выбирать людей в&nbsp;команду. На&nbsp;первой установочной сессии выяснилось, что каждый обладает совершенно разной экспертизой, знаниями, степенью вовлеченности в&nbsp;проект. И&nbsp;хотя у&nbsp;меня уже был опыт менторства, и&nbsp;я&nbsp;примерно представлял, что меня ждет&nbsp;&mdash; на&nbsp;деле все оказалось гораздо сложнее. Но&nbsp;важно, что нам удалось научиться доверять друг другу в&nbsp;процессе работы, без этого мы&nbsp;не&nbsp;смогли&nbsp;бы реализовать наши идеи</blockquote>
-							<!-- picture-->
-							<picture> 
-								<source type="image/avif" srcset="img/@2x/avif/cite-photo-2.avif"/>
-								<source type="image/webp" srcset="img/@2x/webp/cite-photo-2.webp"/><img src="img/@2x/cite-photo-2.jpg" alt="" loading="lazy"/>
-							</picture>
-							<!-- /picture-->
-							<figcaption>Дмитрий Пёрышков <br>
-								<cite>Совладелец и&nbsp;креативный директор DDVB</cite>
-							</figcaption>
-						</figure>
+					<blockquote>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec gravida magna ac vehicula volutpat. Nam non aliquam magna. Etiam et consectetur purus.</blockquote>
+					<div class="author-block">
+						<!-- picture-->
+						<picture> 
+							<source type="image/avif" srcset="img/@2x/avif/cite-photo.avif"/>
+							<source type="image/webp" srcset="img/@2x/webp/cite-photo.webp"/><img src="img/@2x/cite-photo.jpg" alt="" loading="lazy"/>
+						</picture>
+						<!-- /picture-->
+						<figcaption>Даша Данилычева <br>
+							<cite>Дизайнер проекта</cite>
+						</figcaption>
 						<p>А&nbsp;вот что говорят сами студенты об&nbsp;участии в&nbsp;проекте:</p>
 						<!-- picture-->
 						<picture> 
