--- a/public/18-contentPage.html
+++ b/public/18-contentPage.html
@@ -207,11 +207,8 @@
 								</tbody>
 							</table>
 						</div>
-					<figure>
-						<svg class="icon icon-quote ">
-							<use xlink:href="img/svg/sprite.svg#quote"></use>
-						</svg>
-						<blockquote>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec gravida magna ac vehicula volutpat. Nam non aliquam magna. Etiam et consectetur purus.</blockquote>
+					<blockquote>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec gravida magna ac vehicula volutpat. Nam non aliquam magna. Etiam et consectetur purus.</blockquote>
+					<div class="author-block">
 						<!-- picture-->
 						<picture> 
 							<source type="image/avif" srcset="img/@2x/avif/cite-photo.avif"/>
@@ -221,7 +218,7 @@
 						<figcaption>Даша Данилычева <br>
 							<cite>Дизайнер проекта</cite>
 						</figcaption>
-					</figure>
+					</div>
 					<h3>H3&nbsp;Header two line words description</h3>
 					<p>Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. Donec non purus venenatis, congue lectus nec, volutpat dui. Donec non orci et justo <a href="#">pulvinar tincidunt et vel enim.</a> Cras at nulla massa. Nulla metus enim, consequat eu ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.</p>
 					<ol>
