--- a/public/index.html
+++ b/public/index.html
@@ -243,34 +243,34 @@
 							<p class="services-description-text">Процесс создания брендов мы&nbsp;понимаем комплексно и&nbsp;можем взять на&nbsp;себя весь спектр работ&nbsp;&mdash; от&nbsp;проведения маркетинговых исследований до&nbsp;тестирования и&nbsp;реализации собственных творческих разработок.
 							</p>
 						</div>
-						<div class="col">
-							<ul class="services-list services-list--indent">
-								<li class="services-list__item">
-									<a class="services-list__link" href="#">Все услуги
-									</a>
-								</li>
-								<li class="services-list__item">
-									<a class="services-list__link" href="#">Потребительский брендинг
-									</a>
-								</li>
-								<li class="services-list__item">
-									<a class="services-list__link" href="#">Корпоративный брендинг
-									</a>
-								</li>
-								<li class="services-list__item">
-									<a class="services-list__link" href="#">Стратегия
-									</a>
-								</li>
-								<li class="services-list__item">
-									<a class="services-list__link" href="#">Продвижение
-									</a>
-								</li>
-							</ul>
-						</div>
 					</div>
 				</div>
 			</div>
 			<!-- end sServiceHead-->
+			<div class="container">
+				<ul class="services-list services-list--indent">
+					<li class="services-list__item">
+						<a class="services-list__link" href="#">Все услуги
+						</a>
+					</li>
+					<li class="services-list__item">
+						<a class="services-list__link" href="#">Потребительский брендинг
+						</a>
+					</li>
+					<li class="services-list__item">
+						<a class="services-list__link" href="#">Корпоративный брендинг
+						</a>
+					</li>
+					<li class="services-list__item">
+						<a class="services-list__link" href="#">Стратегия
+						</a>
+					</li>
+					<li class="services-list__item">
+						<a class="services-list__link" href="#">Продвижение
+						</a>
+					</li>
+				</ul>
+			</div>
 			<!-- start sCard-->
 			<div class="sCard section">
 				<div class="container-wide">
