--- a/public/03-Service-2.html
+++ b/public/03-Service-2.html
@@ -206,147 +206,140 @@
 				</div>
 				<div class="swiper-pagination"></div>
 			</div>
-			<!-- start sServiceHead-->
-			<div class="sServiceHead section">
+			<div class="sServiceHead section pb-0">
 				<div class="container">
-					<div class="sServiceHead__row row">
-						<div class="col">
-							<ul class="services-list">
-								<li class="services-list__item">
-									<a class="services-list__link" href="#">Стратегия
-									</a>
-								</li>
-								<li class="services-list__item">
-									<a class="services-list__link" href="#">Корпоративный брендинг
-									</a>
-								</li>
-								<li class="services-list__item">
-									<a class="services-list__link" href="#">Продвижение
-									</a>
-								</li>
-							</ul>
+					<div class="col">
+						<ul class="services-list">
+							<li class="services-list__item">
+								<a class="services-list__link" href="#">Стратегия
+								</a>
+							</li>
+							<li class="services-list__item">
+								<a class="services-list__link" href="#">Корпоративный брендинг
+								</a>
+							</li>
+							<li class="services-list__item">
+								<a class="services-list__link" href="#">Продвижение
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="sServiceHead section pt-0">
+				<div class="container">
+					<div class="col-12">
+						<p class="services-description-text">Разработка системы визуальной коммуникации и&nbsp;архитектуры бренда корпоративной социальной программы Металлоинвеста
+						</p>
+					</div>
+				</div>
+				<!-- start sCard-->
+				<div class="sCard section">
+					<div class="container-wide">
+						<div class="row">
+							<div class="col-md-6">
+								<div class="cardWrrap">
+									<div class="cardWrrap__content">
+									</div>
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/card-bg-4.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/card-bg-4.webp"/><img class="object-fit-js" src="img/@2x/card-bg-4.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture-->
+								</div>
+							</div>
+							<div class="col-md-6"> 
+								<div class="cardWrrap">
+									<div class="cardWrrap__content">
+									</div>
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/card-bg-5.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/card-bg-5.webp"/><img class="object-fit-js" src="img/@2x/card-bg-5.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture-->
+								</div>
+							</div>
 						</div>
-						<div class="col-12">
-							<p class="services-description-text">Разработка системы визуальной коммуникации и&nbsp;архитектуры бренда корпоративной социальной программы Металлоинвеста
-							</p>
-						</div>
-						<div class="dd-group dd-group-js">
-							<div class="dd-group__item">
-								<div class="dd-group__head dd-head-js">
-									<div class="dd-group__row row">
-										<div class="col">
-											<div class="dd-group__wrraper">
-												<h4>Ситуация</h4>
-												<p>Корпоративная социальная программа «Вместе» реализуется Металлоинвестом и направлена на создание условий для развития регионов присутствия.  </p>
-											</div>
+					</div>
+				</div>
+				<!-- end sCard-->
+				<div class="container">
+					<div class="dd-group dd-group-js">
+						<div class="dd-group__item">
+							<div class="dd-group__head dd-head-js">
+								<div class="dd-group__row row">
+									<div class="col">
+										<div class="dd-group__wrraper">
+											<h4>Ситуация</h4>
+											<p>Корпоративная социальная программа «Вместе» реализуется Металлоинвестом и направлена на создание условий для развития регионов присутствия.  </p>
 										</div>
-										<div class="col-auto">
-											<button></button>
-										</div>
+									</div>
+									<div class="col-auto">
+										<button></button>
 									</div>
 								</div>
 							</div>
-							<div class="dd-group__item">
-								<div class="dd-group__head dd-head-js">
-									<div class="dd-group__row row">
-										<div class="col">
-											<div class="dd-group__wrraper">
-												<h4>Задача</h4>
-												<p>Разработать архитектуру и гибкую систему визуальной коммуникации для разных типов носителей. В едином фирменном стиле дифференцировать</p>
-											</div>
+						</div>
+						<div class="dd-group__item">
+							<div class="dd-group__head dd-head-js">
+								<div class="dd-group__row row">
+									<div class="col">
+										<div class="dd-group__wrraper">
+											<h4>Задача</h4>
+											<p>Разработать архитектуру и гибкую систему визуальной коммуникации для разных типов носителей. В едином фирменном стиле дифференцировать</p>
 										</div>
-										<div class="col-auto">
-											<button></button>
-										</div>
+									</div>
+									<div class="col-auto">
+										<button></button>
 									</div>
 								</div>
 							</div>
-							<div class="dd-group__item">
-								<div class="dd-group__head dd-head-js">
-									<div class="dd-group__row row">
-										<div class="col">
-											<div class="dd-group__wrraper">
-												<h4>Решение</h4>
-												<p>&laquo;Вместе &raquo;&nbsp;&mdash; строится будущее руками каждого, кому небезразлично настоящее. Инициативы граждан Металлоинвест реализует вместе с&nbsp;ними. Архитектура &laquo;Вместе&raquo; вмещает под своим зонтиком разные направления: &laquo;Вместе со&nbsp;спортом&raquo;, &laquo;Вместе с&nbsp;культурой&raquo;, &laquo;Вместе с&nbsp;призванием&raquo;</p>
-											</div>
+						</div>
+						<div class="dd-group__item">
+							<div class="dd-group__head dd-head-js">
+								<div class="dd-group__row row">
+									<div class="col">
+										<div class="dd-group__wrraper">
+											<h4>Решение</h4>
+											<p>&laquo;Вместе &raquo;&nbsp;&mdash; строится будущее руками каждого, кому небезразлично настоящее. Инициативы граждан Металлоинвест реализует вместе с&nbsp;ними. Архитектура &laquo;Вместе&raquo; вмещает под своим зонтиком разные направления: &laquo;Вместе со&nbsp;спортом&raquo;, &laquo;Вместе с&nbsp;культурой&raquo;, &laquo;Вместе с&nbsp;призванием&raquo;</p>
 										</div>
-										<div class="col-auto">
-											<button></button>
-										</div>
+									</div>
+									<div class="col-auto">
+										<button></button>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-			<!-- end sServiceHead-->
-			<!-- start sCard-->
-			<div class="sCard section">
-				<div class="container-wide">
-					<div class="row">
-						<div class="col-md-6">
-							<div class="cardWrrap">
-								<div class="cardWrrap__content">
+				<!-- start sCard-->
+				<div class="sCard section">
+					<div class="container-wide">
+						<div class="row">
+							<div class="col-md-12">
+								<div class="cardWrrap cardWrrap--horizontal">
+									<div class="cardWrrap__content">
+									</div>
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/card-bg-6.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/card-bg-6.webp"/><img class="object-fit-js" src="img/@2x/card-bg-6.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture-->
 								</div>
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/card-bg-4.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/card-bg-4.webp"/><img class="object-fit-js" src="img/@2x/card-bg-4.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</div>
-						</div>
-						<div class="col-md-6"> 
-							<div class="cardWrrap">
-								<div class="cardWrrap__content">
-								</div>
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/card-bg-5.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/card-bg-5.webp"/><img class="object-fit-js" src="img/@2x/card-bg-5.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</div>
-						</div>
-						<div class="col-md-12">
-							<div class="cardWrrap cardWrrap--horizontal">
-								<div class="cardWrrap__content">
-								</div>
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/card-bg-6.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/card-bg-6.webp"/><img class="object-fit-js" src="img/@2x/card-bg-6.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
 							</div>
 						</div>
 					</div>
 				</div>
+				<!-- end sCard-->
 			</div>
-			<!-- end sCard-->
-			<!-- start sVideo-->
-			<div class="sVideo section" id="sVideo">
+			<div class="sContent section">
 				<div class="container">
-					<p>Иллюстрации&nbsp;&mdash; детально проработанные&nbsp;&mdash; в&nbsp;связке с&nbsp;логотипом акцентуализируют коммуникацию. Их&nbsp;взаимодействие с&nbsp;фирменным стилем универсально, и&nbsp;при необходимости, взаимозаменяемо. Мы&nbsp;предусмотрели и&nbsp;расширение числа иллюстраций программы и&nbsp;прописали в&nbsp;гайде требования к&nbsp;их&nbsp;разработке, чтобы любая инициатива могла быть ярко обозначена на&nbsp;любом носителе.</p>
-					<p>Иллюстрации&nbsp;&mdash; детально проработанные&nbsp;&mdash; в&nbsp;связке с&nbsp;логотипом акцентуализируют коммуникацию. Их&nbsp;взаимодействие с&nbsp;фирменным стилем универсально, и&nbsp;при необходимости, взаимозаменяемо.</p>
-				</div>
-				<div class="container-wide">
-					<div class="video-wrrpaer">
-						<iframe src="https://www.youtube.com/embed/L_LUpnjgPso" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
-					</div>
-				</div>
-			</div>
-			<!-- end sVideo-->
-			<!-- start sServiceCite-->
-			<div class="sServiceCite section" id="sServiceCite">
-				<div class="container">
-					<p>Иллюстрации&nbsp;&mdash; детально проработанные&nbsp;&mdash; в&nbsp;связке с&nbsp;логотипом акцентуализируют коммуникацию. Их&nbsp;взаимодействие с&nbsp;фирменным стилем универсально, и&nbsp;при необходимости, взаимозаменяемо. Мы&nbsp;предусмотрели и&nbsp;расширение числа иллюстраций программы и&nbsp;прописали в&nbsp;гайде требования к&nbsp;их&nbsp;разработке, чтобы любая инициатива могла быть ярко обозначена на&nbsp;любом носителе.</p>
-					<figure>
-						<svg class="icon icon-quote ">
-							<use xlink:href="img/svg/sprite.svg#quote"></use>
-						</svg>
-						<blockquote>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec gravida magna ac vehicula volutpat. Nam non aliquam magna. Etiam et consectetur purus.</blockquote>
+					<p>Quisque ut&nbsp;consectetur risus, in&nbsp;rhoncus urna. Aenean pellentesque, velit id&nbsp;suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. <a href="#">Donec non purus</a> venenatis, congue lectus nec, volutpat dui. Donec non orci et&nbsp;justo pulvinar tincidunt et&nbsp;vel enim. Cras at&nbsp;nulla massa. Nulla metus enim, consequat eu&nbsp;ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.</p>
+					<blockquote>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec gravida magna ac vehicula volutpat. Nam non aliquam magna. Etiam et consectetur purus.</blockquote>
+					<div class="author-block">
 						<!-- picture-->
 						<picture> 
 							<source type="image/avif" srcset="img/@2x/avif/cite-photo.avif"/>
@@ -356,10 +349,24 @@
 						<figcaption>Даша Данилычева <br>
 							<cite>Дизайнер проекта</cite>
 						</figcaption>
-					</figure>
+					</div>
 				</div>
 			</div>
-			<!-- end sServiceCite-->
+			<!-- start sVideo-->
+			<div class="sVideo section" id="sVideo">
+				<div class="container-wide">
+					<div class="video-wrrpaer mt-0">
+						<iframe src="https://www.youtube.com/embed/L_LUpnjgPso" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+					</div>
+				</div>
+			</div>
+			<!-- end sVideo-->
+			<div class="sContent section pb-0">
+				<div class="container">
+					<p>Иллюстрации&nbsp;&mdash; детально проработанные&nbsp;&mdash; в&nbsp;связке с&nbsp;логотипом акцентуализируют коммуникацию. Их&nbsp;взаимодействие с&nbsp;фирменным стилем универсально, и&nbsp;при необходимости, взаимозаменяемо. Мы&nbsp;предусмотрели и&nbsp;расширение числа иллюстраций программы и&nbsp;прописали в&nbsp;гайде требования к&nbsp;их&nbsp;разработке, чтобы любая инициатива могла быть ярко обозначена на&nbsp;любом носителе.</p>
+					<p>Иллюстрации&nbsp;&mdash; детально проработанные&nbsp;&mdash; в&nbsp;связке с&nbsp;логотипом акцентуализируют коммуникацию. Их&nbsp;взаимодействие с&nbsp;фирменным стилем универсально, и&nbsp;при необходимости, взаимозаменяемо.</p>
+				</div>
+			</div>
 			<!-- start sCard-->
 			<div class="sCard section">
 				<div class="container-wide">
@@ -392,34 +399,34 @@
 				</div>
 			</div>
 			<!-- end sCard-->
-			<!-- start sServiceHead-->
-			<div class="sServiceHead section sServiceHead sServiceHead--for-what">
+			<div class="sServiceHead sServiceHead--for-what section pt-0">
 				<div class="container">
-					<div class="sServiceHead__row row">
-						<div class="col-12">
-							<p class="services-description-text">Иллюстрации&nbsp;&mdash; детально проработанные&nbsp;&mdash; в&nbsp;связке с&nbsp;логотипом акцентуализируют коммуникацию. Их&nbsp;взаимодействие с&nbsp;фирменным стилем универсально, и&nbsp;при необходимости, взаимозаменяемо. Мы&nbsp;предусмотрели и&nbsp;расширение числа иллюстраций программы и&nbsp;прописали в&nbsp;гайде требования к&nbsp;их&nbsp;разработке, чтобы любая инициатива могла быть ярко обозначена на&nbsp;любом носителе.
-							</p>
-						</div>
-						<div class="col">
-							<ul class="services-list">
-								<li class="services-list__item">
-									<a class="services-list__link" href="#">Стратегия
-									</a>
-								</li>
-								<li class="services-list__item">
-									<a class="services-list__link" href="#">Корпоративный брендинг
-									</a>
-								</li>
-								<li class="services-list__item">
-									<a class="services-list__link" href="#">Продвижение
-									</a>
-								</li>
-							</ul>
-						</div>
+					<div class="col-12">
+						<p class="services-description-text">Иллюстрации&nbsp;&mdash; детально проработанные&nbsp;&mdash; в&nbsp;связке с&nbsp;логотипом акцентуализируют коммуникацию. Их&nbsp;взаимодействие с&nbsp;фирменным стилем универсально, и&nbsp;при необходимости, взаимозаменяемо. Мы&nbsp;предусмотрели и&nbsp;расширение числа иллюстраций программы и&nbsp;прописали в&nbsp;гайде требования к&nbsp;их&nbsp;разработке, чтобы любая инициатива могла быть ярко обозначена на&nbsp;любом носителе.
+						</p>
 					</div>
 				</div>
 			</div>
-			<!-- end sServiceHead-->
+			<div class="sServiceHead sServiceHead--for-what section p-0">
+				<div class="container">
+					<div class="col">
+						<ul class="services-list">
+							<li class="services-list__item">
+								<a class="services-list__link" href="#">Стратегия
+								</a>
+							</li>
+							<li class="services-list__item">
+								<a class="services-list__link" href="#">Корпоративный брендинг
+								</a>
+							</li>
+							<li class="services-list__item">
+								<a class="services-list__link" href="#">Продвижение
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
 			<!-- start sNews-->
 			<div class="sNews section" id="sNews">
 				<div class="container-wide">
